<resources>
    <string name="app_name">DicodingEventApp</string>
    <string name="home">Home</string>
    <string name="upcoming">Upcoming Event</string>
    <string name="finish">Finish Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Dicoding Event</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="nama_event">Nama Event</string>
    <string name="finished_events">Finished Events</string>
    <string name="judul_event_event_name">Judul Event / Event Name</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
</resources>