<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/upcoming"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        />

    <item
        android:id="@+id/navigation_finish"
        android:icon="@drawable/ic_finish"
        android:title="@string/finish"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        />

</menu>